Bug 148526 - LibreOffice Draw PDF file displayed incorrectly, visual elements blocked by unmasked radial gradient
Summary: LibreOffice Draw PDF file displayed incorrectly, visual elements blocked by u...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL: http://www.linuxvoice.com/wp-content/...
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: PDF-Import-Draw
  Show dependency treegraph
 
Reported: 2022-04-11 23:06 UTC by Klemen
Modified: 2025-01-11 22:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
pdf file where the visual bug occurs (1.75 MB, application/pdf)
2022-04-11 23:08 UTC, Klemen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Klemen 2022-04-11 23:06:18 UTC
Description:
If the pdf is opened with a LibreOffice Draw, it is displayed incorrectly as some items are obstructing the content, due to the items being some visual effects, displayed correctly in other pdf viewers like Mozilla's web browser.

The bug causes the article text to not be visible because some elements are covering it.

pdf location: http://www.linuxvoice.com/wp-content/uploads/2014/05/Linux_Voice_Munich.pdf



Steps to Reproduce:
1. Open this pdf file: http://www.linuxvoice.com/wp-content/uploads/2014/05/Linux_Voice_Munich.pdf
2. Save the pdf file locally and open it with LibreOffice Draw
3. See obstructing circle shapes.

Actual Results:
When the file is opened with LibreOffice Draw, it is unreadable, because a majority of the article is covered by a white circle (which is presumably an effect that isn't an issue on other pdf readers like mozilla firefox browser). These white circles are present on multiple pages.

Expected Results:
If there's any effects that are supposed to be displayed correctly in the white circle area, they should not obstruct the text. See the file with other pdf viewers for example.


Reproducible: Always


User Profile Reset: No



Additional Info:
The software should display the pdf file with no visual elements covering the content to the point that it's unreadable.
Comment 1 Klemen 2022-04-11 23:08:39 UTC
Created attachment 179479 [details]
pdf file where the visual bug occurs

This is a pdf where the issue occurs.
Comment 2 flywire 2022-04-11 23:08:56 UTC
Confirmed

Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-AU (en_AU); UI: en-GB
Calc: threaded
Comment 3 Hossein 2022-04-21 21:32:06 UTC
(In reply to flywire from comment #2)
> Confirmed
> 
> Version: 7.3.2.2 (x64) / LibreOffice Community
> Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
> CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL:
> win
> Locale: en-AU (en_AU); UI: en-GB
> Calc: threaded
@flywire:
Please also set the bug status to: NEW

Also confirmed in the latest LibreOffice 7.4 master:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b0f24ca516e13c86d410960788ed6df3efe367b2
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Hossein 2022-04-21 21:44:40 UTC
The bug is reproducible in LibreOffice 6.4:

Version: 6.4.0.1
Build ID: 1b6477b31f0334bd8620a96f0aeeb449b587be9f
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

In LibreOffice 3.5, the obstructing circle is there, but it is black. The PDF is load very slowly and make the application unresponsive:

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735

I'm setting the first affected version to LibreOffice 3.5.

The same problem is visible in Windows.

Version: 7.2.4.1 (x64) / LibreOffice Community
Build ID: 27d75539669ac387bb498e35313b970b7fe9c4f9
CPU threads: 32; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 5 V Stuart Foote 2022-11-20 22:02:07 UTC
Remains valid, but this is a masking and clipping issue.

The superfluous radial gradients are fully hidden when using the Insert as image pdfium import filter.  And, they can be selected and removed from the Draw canvas otherwise.

Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 6 Dave Gilbert 2024-08-29 13:54:20 UTC
My commit:
https://git.libreoffice.org/core/commit/b416c5b8e32632a63e1e791c34896e17d89f7982

seems to fix the first page blob.

The blob on the third page is different though; I think it's the result of a missing 'clipToStrokePath' which I'm working on.
(It's actually the little gradiated lines above the inserted text)

I'm also seeing in this document some completely garbled text; it's fine in Okular; so we've got something else going on as well.
Comment 7 Commit Notification 2024-10-17 18:49:46 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a61eff73a16d891828e8723ad02fffe94b2d2216

tdf#148526 sdext,pdfimport: Parse clipToStrokePath

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-10-17 22:50:39 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/53d5b3119feff3fe6653a38d13e21e6674055211

tdf#148526 sdext,pdfimport: Expand path to contour

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-10-17 22:50:42 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/84cc3180c8d42eb8528840d68fe52055f884120b

tdf#148526 sdext,pdfimport: rendering::PathJoinType to B2DLineJoin

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-10-17 22:50:44 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4faa1775dfd90e781ac2f94a7ae1ada31b9d49f

tdf#148526 sdext,pdfimport: clipToStrokePath: Set line join

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-18 13:32:19 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/af801eafd6b973dcd9e333898782ba43478a41d1

tdf#148526 sdext,pdfimport: Write clipToStrokePath

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Dave Gilbert 2025-01-06 02:17:02 UTC
I think all the original problems in this are gone; there's one major thing left which is some lines of text are complete rubbish; but curiously the same text is output by pdftotext and a few others;

the time. It was well established as a server OS and
fairly well known among computing hobbyists, but still
C^CUOCNN^Cƒ^CUJ^CKP^CVJG^CFGUMVQR^CRQPF^P^C)PQOG^CCPF^C-&'^C
were still young whippersnappers, while hardware
detection needed improvements and top-quality


I think the problem here is in the original pdf where some of the fonts have a ToUnicode map which is bogus; my reading is the map is a 1:1 identity mapping even though those lines really do seem to be using some weird encoding.
Comment 13 Dave Gilbert 2025-01-11 22:02:46 UTC
OK, as per the previous comment the original problems are all fixed.

The corrupt text seems to be due to the PDF having a (purposely???) bad ToUnicode map, and thus gets the text wrong in anything that tries to convert to text including pdftotext or copy/paste in Okular.

I've documented that as a limitation in:

https://gerrit.libreoffice.org/c/core/+/180132